hphp/hack/test/typecheck/new_inference/recursive_type_option.php.exp
ERROR: File "recursive_type_option.php", line 8, characters 10-14:
Invalid return type (Typing[4110])
  File "recursive_type_option.php", line 3, characters 25-27:
  Expected `int`
  File "recursive_type_option.php", line 8, characters 10-14:
  But got `?(int | _)`
  File "recursive_type_option.php", line 5, characters 13-16:
    from this definition
